[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/actors/PlayerBullet.gd" type="Script" id=1]
[ext_resource path="res://assets/squares/Glow_3/20x20_green.png" type="Texture" id=2]
[ext_resource path="res://assets/squares/Glow_3/20x20_gray.png" type="Texture" id=3]
[ext_resource path="res://assets/squares/8x8_gray.png" type="Texture" id=4]
[ext_resource path="res://assets/squares/8x8_white.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3.00688, 3.03549 )

[sub_resource type="CanvasItemMaterial" id=2]
blend_mode = 1
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="CanvasItemMaterial" id=3]
blend_mode = 1

[sub_resource type="CanvasItemMaterial" id=4]
blend_mode = 1

[node name="PlayerBullet" type="Area2D"]
scale = Vector2( 0.25, 0.25 )
priority = 2.0
monitoring = false
collision_layer = 4
collision_mask = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.941176 )
material = SubResource( 2 )
texture = ExtResource( 2 )

[node name="GlowSprite" type="Sprite" parent="."]
editor/display_folded = true
visible = false
material = SubResource( 2 )
texture = ExtResource( 3 )

[node name="spriteColor" type="Sprite" parent="GlowSprite"]
visible = false
modulate = Color( 0.992188, 0, 1, 0.564706 )
material = SubResource( 3 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 4 )

[node name="GlowSprite2" type="Sprite" parent="GlowSprite"]
visible = false
modulate = Color( 1, 1, 1, 0.501961 )
material = SubResource( 2 )
texture = ExtResource( 3 )

[node name="particleColor" type="Sprite" parent="."]
editor/display_folded = true
visible = false
modulate = Color( 1, 0, 1, 1 )
texture = ExtResource( 4 )

[node name="Sprite2" type="Sprite" parent="particleColor"]
material = SubResource( 2 )
texture = ExtResource( 3 )

[node name="BackGlowEffects" type="Node2D" parent="particleColor"]
editor/display_folded = true
visible = false

[node name="outerGlowEffect2" type="Sprite" parent="particleColor/BackGlowEffects"]
modulate = Color( 0.992157, 0.992157, 0.992157, 0.188235 )
material = SubResource( 4 )
scale = Vector2( 1.9, 1.9 )
texture = ExtResource( 5 )

[node name="outerGlowEffect" type="Sprite" parent="particleColor/BackGlowEffects"]
visible = false
modulate = Color( 0.992157, 0.992157, 0.992157, 0.188235 )
material = SubResource( 4 )
scale = Vector2( 1.6, 1.6 )
texture = ExtResource( 5 )

[node name="innerOuterGlowEffect2" type="Sprite" parent="particleColor/BackGlowEffects"]
modulate = Color( 0.992157, 0.992157, 0.992157, 0.188235 )
material = SubResource( 4 )
scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 5 )

[node name="innerOuterGlowEffect" type="Sprite" parent="particleColor/BackGlowEffects"]
visible = false
modulate = Color( 0.992157, 0.992157, 0.992157, 0.752941 )
material = SubResource( 4 )
scale = Vector2( 1.1, 1.1 )
texture = ExtResource( 5 )

[node name="FrontGlowEffects" type="Node2D" parent="."]
editor/display_folded = true
visible = false

[node name="innerGlowEffect" type="Sprite" parent="FrontGlowEffects"]
modulate = Color( 0.992157, 0.992157, 0.992157, 0.188235 )
material = SubResource( 4 )
texture = ExtResource( 5 )

[node name="highLight" type="Sprite" parent="FrontGlowEffects"]
modulate = Color( 0.992157, 0.992157, 0.992157, 0.501961 )
material = SubResource( 4 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 5 )

[node name="highLight2" type="Sprite" parent="FrontGlowEffects"]
modulate = Color( 0.992157, 0.992157, 0.992157, 0.501961 )
material = SubResource( 4 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 5 )

[node name="lifetime" type="Timer" parent="."]
wait_time = 0.75
autostart = true

[node name="Light2D" type="Light2D" parent="."]
visible = false
position = Vector2( 0.113125, 0.226247 )
scale = Vector2( 5, 5 )
texture = ExtResource( 2 )
shadow_enabled = true
[connection signal="timeout" from="lifetime" to="." method="_on_lifetime_timeout"]
